Links and spelling

--- a/about.Rmd
+++ b/about.Rmd
@@ -71,7 +71,7 @@ Assisted teacher in special education classrooms either in a group setting or wo
 
 **2017** - Airman of the Quarter Nominee
 
-## Technical Skills  
+## _Technical Skills_  
   
 **Software Packages**  
 _(both Windows
