--- a/about.Rmd
+++ b/about.Rmd
@@ -67,9 +67,9 @@ Assisted teacher in special education classrooms either in a group setting or wo
 
 ## _Academic Awards and Honours_  
   
-**2021** - Non-Commissioned Officer of the Quarter Nominee  
+**2021** - Non-Commissioned Officer of the Quarter 
 
-**2017** - Airman of the Quarter Nominee
+**2017** - Airman of the Quarter 
 
 ## _Technical Skills_  
   
